src/test/ui/no-std-inject.rs
#![no_std]
#![allow(unused_extern_crates)]

extern crate core; //~ ERROR: the name `core` is defined multiple times
extern crate std;

fn main() {}
